<resources>
    <string name="app_name">GupShup</string>
    <string name="homepage_name">Home</string>
    <string name="shorts">Shorts</string>
    <string name="add"></string>
    <string name="subscription">Subscription</string>
    <string name="library">Library</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>