<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/homepage_name"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/shorts"
        android:title="@string/shorts"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/add"
        android:title="@string/add"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/subsription"
        android:title="@string/subscription"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/library"
        android:title="@string/library"/>


</menu>